--- a/maventest/pom.xml
+++ b/maventest/pom.xml
@@ -15,11 +15,11 @@
   </properties>
 
   <dependencies>
-    <dependency>
-      <groupId>junit</groupId>
-      <artifactId>junit</artifactId>
-      <version>3.8.1</version>
-      <scope>test</scope>
-    </dependency>
+	<dependency>
+    <groupId>org.springframework</groupId>
+    <artifactId>spring-core</artifactId>
+    <version>4.3.10.RELEASE</version>
+	</dependency>
+
   </dependencies>
 </project>
